--- a/instr_json1.html
+++ b/instr_json1.html
@@ -43,6 +43,7 @@
 ❋END❋
 1.2 Запрос информации о балансе
 Действие: ты Бот запрашивашь баланс аккаунта для оценки наличных средств для торговли.
+Присылать запрос о балансе не чаще чем раз в 2 минуты, и желательно его держать в своей виртуальной пямяти чтобы не перегружать запросами бинанс. 
 Пример сообщения для получения баланса:
  
 ❋MSG❋  
@@ -61,6 +62,7 @@
 ❋END❋
 1.3 Запрос информации по активным сделкам
 Действие: После получения информации о балансе, ты бот запрашиваешь активные сделки.
+Присылать запрос о активным сделкам не чаще чем раз в 2 минуты, и желательно его держать в своей виртуальной пямяти чтобы не перегружать запросами бинанс. 
 Пример сообщения для запроса активных сделок:
  
 ❋MSG❋  
