--- a/instr2.html
+++ b/instr2.html
@@ -9,13 +9,11 @@
     <pre>
  
 Инструкция для бота по мониторингу и принятию решений
-После покупки:
-
-Шаг 1: Сделать запрос на покупку актива (например, монеты ADAUSDT) через команду PlaceMarketOrder.
+1. После покупки:
+Шаг 1: Сделать запрос на покупку актива (выбор монет из топ 50) через команду PlaceMarketOrder.
 Шаг 2: Записать цену покупки (например, цену, по которой была сделана покупка) в памяти бота или в базу данных для дальнейшего анализа. Эта цена будет использоваться для вычисления прибыли/убытка.
 Шаг 3: Записать количество купленных монет для дальнейшего контроля за позицией.
-Мониторинг позиции:
-
+2. Мониторинг позиции:
 Шаг 4: В фоновом режиме через регулярные интервалы (например, каждые 30 секунд) запрашивать текущие данные о позиции через команду GetStatus:
 Получить текущую цену монеты.
 Получить прибыль/убыток по текущей позиции.
@@ -23,12 +21,7 @@
 Шаг 5: В процессе мониторинга:
 Если прибыль/убыток достигает заранее установленного лимита (например, тейк-профит или стоп-лосс), отправить команду для закрытия позиции (например, через команду PlaceMarketOrder).
 Сравнивать текущую цену с ценой покупки. Если цена значительно изменилась в невыгодную сторону, бот может решить закрыть позицию для минимизации убытков.
-Мониторинг топ-50 монет:
-
-Бот должен мониторить топ-50 монет, выбранных для скальпинга, анализируя их ликвидность, волатильность и другие важные параметры.
-Для каждой монеты бот должен проверять условия для входа в позицию, следить за текущими трендами и принимать решения на основе этих данных.
-Принятие решения по дальнейшим действиям:
-
+3. Принятие решения по дальнейшим действиям:
 Шаг 6: После каждого запроса на мониторинг:
 Анализировать текущую прибыль/убыток по позиции.
 Если цена достижения тейк-профита или стоп-лосса, закрыть сделку.
@@ -36,16 +29,13 @@
 Шаг 7: Если необходимо, принять решение о:
 Открытии новой позиции (например, шорт-позиции), если анализ показывает возможность получения прибыли.
 Прекращении мониторинга и ожидании новых сигналов для дальнейших действий.
-Закрытие позиции:
-
+4. Закрытие позиции:
 Шаг 8: Если цена по активу достигла цели по прибыли или убытку:
 Отправить команду на закрытие позиции, используя соответствующую команду, например PlaceMarketOrder с параметром "SELL" для закрытия длинной позиции или "BUY" для шорт-позиции.
-Фоновая работа:
-
+5. Фоновая работа:
 Шаг 9: Бот должен работать непрерывно, поддерживая мониторинг активных позиций, анализируя прибыль/убыток и принимая решения на основе рыночных условий.
 Бот должен иметь возможность делать перерывы между запросами, чтобы не перегружать систему, но при этом всегда быть готовым к реагированию на изменения в рынке.
-Теперь бот будет следить не только за текущими активными сделками, но и мониторить топ-50 монет для возможности быстрого реагирования на изменение рынка и выполнения новых сделок.
-
+         Давай комманду SHORT перепроверим
          </pre>
 </body>
 </html>
