--- a/Promt.html
+++ b/Promt.html
@@ -7,7 +7,30 @@
 </head>
 <body>
     <pre>
- 
+  Prompt-request (for ChatGPT):
+
+➡️ When analyzing a meeting transcript, you must always:
+
+1️⃣ Understand Vjacheslav’s main goal:
+– He needs to clearly see what is DIRECTLY related to his tasks (for example: Reassign Issue, script publishing, Workflow, testing, etc.).
+– Show WHO said what, and WHO is assigning tasks or expecting action from him.
+– Explain if Vjacheslav has any NEW tasks or if he can continue as planned.
+– Highlight if Vjacheslav (Slava) was mentioned by name or discussed.
+
+2️⃣ Break down the transcript in detail:
+– What topics were discussed.
+– What the key people said (Snigdha, Tom, Swapnil, Umer, Alexander, etc.).
+– Everything that is connected to Vjacheslav’s current responsibilities (code fix, diagrams, tests).
+– Whether there are new risks or priority changes.
+
+3️⃣ If something is unclear, CLEARLY say what is not clear and suggest what Vjacheslav can ask the team to clarify.
+
+4️⃣ If Vjacheslav writes something emotionally (for example, “I don’t understand”), re-analyze EVERYTHING step by step and explain in a super simple and clear way, so he understands at a glance.
+
+💡 Extra:
+If a transcript is long and there are new uploads of the same file, remember:
+➡️ it’s one single file with NEW parts added inside (a running log).
+➡️ always analyze the full picture (not just the new part but the full history).
 
 
     </pre>
